Update 'scsg54bu0-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:4f41052c2825b7d343159a9b083d21ebe1d2622c@sha256:5c8b6c55eb2ede64c1ab4dc8d0c87d484ba653220ab331ae5ac42826a325a782

--- a/components/scsg54bu0-python/overlays/development/deployment-patch.yaml
+++ b/components/scsg54bu0-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: scsg54bu0-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:4f41052c2825b7d343159a9b083d21ebe1d2622c@sha256:5c8b6c55eb2ede64c1ab4dc8d0c87d484ba653220ab331ae5ac42826a325a782
+          name: container-image
